--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,9 +1,13 @@
 #footer {
-    border: 2px solid rgb(164, 0, 197);
-    background-color: pink;
+    background-color: #B8FFC7;
     position: fixed;
     bottom: 0;
-    height: 40px;
+    height: 50px;
     width: 100%;
     margin-top: 40px;
+}
+
+.socialbuttons {
+    display: flex;
+    justify-content: center;
 }
