--- a/src/components/Navigation/NavBar.css
+++ b/src/components/Navigation/NavBar.css
@@ -1,8 +1,9 @@
 #navBarLogo {
     width: 17%;
     height: auto;
+    margin: 0.3%;
 }
 
 #navbar {
-    background-color: #e8f8ff;
+    background-color: #f8eaff;
 }
