lots of CSS, all MVPs are done, still needs some formatting work

--- a/src/components/Authorization/Login.css
+++ b/src/components/Authorization/Login.css
@@ -5,6 +5,22 @@
     flex-wrap: wrap;
 }
 
-#loginButton {
+#loginButton, #headerSegment {
     background-color: #DA96FF;
+}
+
+#l
+
+#loginForm {
+    font-size: 120%;
+    text-align: center;
+}
+
+#subheader {
+    font-size: 80%;
+    font-weight: bold;
+}
+
+.form-field {
+    align-items: center;
 }
