--- a/src/components/MyHub/MyHub.css
+++ b/src/components/MyHub/MyHub.css
@@ -1,10 +1,34 @@
 #myHubCardGroup {
     display: flex;
     justify-content: center;
-    padding: 75px;
 }
 
 #myHubButton {
     background-color: #DA96FF;
 
+}
+
+#individualCard {
+    margin: 50px;
+}
+
+#header {
+    display: flex;
+    justify-content: center;
+}
+
+#myHubQuote {
+    width: auto;
+    height: 150px;
+}
+
+#cardDescription {
+    padding: 10px;
+}
+
+#cardContent {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
