Application has all MVPs finished and first 2 stretch goals. Components are cleaned up and labeled. Still need to edit readme, add ERD, unignore database, and clean up public.

--- a/src/components/Authorization/Login.css
+++ b/src/components/Authorization/Login.css
@@ -1,15 +1,22 @@
-#loginPageHeader, #headerSegment {
+/* CSS for Login Page */
+
+#loginPageHeader,
+#headerSegment {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
 }
 
-#loginButton, #headerSegment {
+#loginButton,
+#headerSegment {
     background-color: #DA96FF;
 }
 
-#l
+#loginButton {
+    color: black;
+    font-size: 15px;
+}
 
 #loginForm {
     font-size: 120%;
