--- a/src/components/Character Profile/IndividualCharacterProfile.css
+++ b/src/components/Character Profile/IndividualCharacterProfile.css
@@ -1,3 +1,5 @@
+/*CSS for IndividualCharacterProfile.js*/
+
 #individualProfileHeader {
     font-size: 50px;
 }
@@ -20,7 +22,7 @@
     width: 80%;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin-bottom: 25px;  
+    margin-bottom: 25px;
 }
 
 #characterProfileQuote {
@@ -33,7 +35,7 @@
     justify-content: center;
     flex-wrap: wrap;
     background-color: #B8FFC7;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(161, 255, 197, 0.782);;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(161, 255, 197, 0.782);
 }
 
 #profileSidebarHeader {
@@ -45,17 +47,17 @@
     margin: 10px;
 }
 
-#sidebarSegment, #profileMainSegment {
+#sidebarSegment,
+#profileMainSegment {
     border: none;
     box-shadow: none;
     background-color: transparent;
 }
 
-/* #fullGrid {
-    background-color: #f9efff;
-} */
-
-#aboutSegment, #etymologySegment, #relationshipSegment, #physicalDescriptionSegment {
+#aboutSegment,
+#etymologySegment,
+#relationshipSegment,
+#physicalDescriptionSegment {
     background-color: #ffc6eb;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(252, 185, 255, 0.782);
 }
