All MVPS, 4 stretch goals, and updated ReadMe

--- a/src/components/Character Profile/Character.css
+++ b/src/components/Character Profile/Character.css
@@ -11,7 +11,7 @@
 /*Handles CSS for CharacterHomeList.js*/
 
 #individualCharacterCard {
-    background-color: #b8ffc7;
+    background-color: #beffcc;
     width: 275px;
     height: 385px;
 }
@@ -25,4 +25,6 @@
 #hubCardProfileButton {
     background-color: #DA96FF;
     color: black;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(231, 255, 240, 0.782);
+
 }
