--- a/src/components/MyHub/MyHub.css
+++ b/src/components/MyHub/MyHub.css
@@ -4,8 +4,10 @@
 }
 
 #myHubButton {
-    background-color: #DA96FF;
-
+    background-color: #b8ffc7;
+    color: black;
+    font-size: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(231, 255, 240, 0.782);
 }
 
 #individualCard {
@@ -24,6 +26,7 @@
 
 #cardDescription {
     padding: 10px;
+    font-size: 14px;
 }
 
 #cardContent {
