--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -9,6 +9,7 @@
     background-color: #b8ffc7;
     color: black;
     font-size: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(231, 255, 240, 0.782);
     margin: 5px 0 75px;
 }
 
@@ -23,8 +24,8 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    background-color: #ffe561;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(221, 169, 0, 0.782);
+    background-color: #ff70cd;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(202, 189, 202, 0.782);
 
 }
 
