--- a/src/components/Character Profile/CharacterForm.css
+++ b/src/components/Character Profile/CharacterForm.css
@@ -14,6 +14,7 @@
     background-color: #DA96FF;
     color: black;
     font-size: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(231, 255, 240, 0.782);
     margin: 5px 0 50px;
 }
 
@@ -22,6 +23,8 @@
     background-color: #b8ffc7;
     color: black;
     font-size: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(231, 255, 240, 0.782);
+
 }
 
 #lineBreakOne {
