--- a/src/components/Character Profile/IndividualCharacterProfile.css
+++ b/src/components/Character Profile/IndividualCharacterProfile.css
@@ -8,13 +8,15 @@
     background-color: #FF70CD;
     color: black;
     font-size: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(152, 45, 134, 0.782);
     margin: 5px 0 75px;
 }
 
 #editProfileButton {
-    background-color: #ffe561;
+    background-color: #b8ffc7;
     color: black;
     font-size: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(85, 161, 114, 0.782);
     margin: 5px 0 75px 15px;
 }
 
